src/app/views/pages/panel/layouts/reseller/reseller.scss
main.reseller {
	--reseller-border-color: var(--primary-color-300);
	--reseller-bg-color: var(--primary-color-50);
	--reseller-header-shadow: 0px 0px 5rem 0px rgba(0, 0, 0, 0.05);
	--reseller-color: var(--tertiary-color-600);
}

main.reseller {
	padding-inline-end: 0;

	.left {
		padding-inline: 0px;
		max-width: 1250px;
		flex: 1 1 10%;
		background: vat(--reseller-bg-color);

		border-radius: 4px;
		height: fit-content;
		min-width: 895px;
	}

	.right {
		background-color: #fff;
		box-shadow: var(--right-pane-shadow);
		display: flex;
		flex-direction: column;
		justify-content: flex-start;
		align-items: center;
		padding-inline-end: 0;
		padding-inline: 1rem;
		flex: 0.4 0.4 0%;

		.card.leads {
			.stat {
				width: 130px;
			}
		}
	}
}

.reseller-header {
	position: relative;
	display: flex;
	flex-direction: column;
	min-height: 130px;
	max-height: 130px;
	height: 100%;
	background-color: #fff;
	box-shadow: var(--reseller-header-shadow);

	.reseller-header-content {
		display: flex;
		flex-direction: row;
		height: 130px;
		border-bottom: 2px solid var(--reseller-border-color);

		.reseller-extra-info {
			display: flex;
			flex-direction: column;
			flex: 1 1;
			border-left: 1px solid var(--reseller-border-color);
			padding-inline-start: 1.25rem;
			justify-content: center;
			line-height: 2rem;
			color: var(--reseller-color);
		}
	}
}
.reseller-assets {
	display: flex;
	margin-block: 1rem;
	column-gap: 1rem;
}

.asset-content {
	display: flex;

	.stats {
		display: flex;
		border: 1px solid var(--reseller-border-color);
		height: fit-content;

		.stat {
			width: 135px;
		}
	}
}

.reseller-tables {
	display: flex;
	flex-direction: column;
}
.table {
	.area {
		flex: 1 1 55px !important;
		max-width: 55px;

		pre {
			display: none;
		}
	}
	.size {
		flex: 1 1 100px !important;
		max-width: 100px;
	}
	.company {
		flex: 1 1 120px !important;
		max-width: 120px;
	}
	.phone {
		flex: 1 1 120px !important;
		max-width: 120px;
	}
	.post {
		min-width: 100px;
		max-width: 100px;
	}
	.full-name {
		max-width: none;
	}
	.location {
		max-width: 170px;
		min-width: 170px;
	}
}

[data-theme='dark'] {
	main {
		--reseller-header-shadow: 0px 0px 5rem 0px rgb(141 141 141 / 5%);
		--reseller-verified: #b1ffb1;
		--reseller-verified-100: #18d018;
		--reseller-verified-200: #026502;

		--reseller-not-verified: #b04646;
		--reseller-not-verified-100: #730101;
		--reseller-not-verified-200: #550000;
	}
}

